// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderCardSVG > renders asynced24's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <!-- Full-art background gradient -->
    <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#3178C6"/>
      <stop offset="40%" stop-color="#58A6FF"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </linearGradient>

    <!-- Evolution badge gradient -->
    <linearGradient id="evoBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#E8E8E8"/>
      <stop offset="100%" stop-color="#B0B0B0"/>
    </linearGradient>

    <!-- Ability badge gradient -->
    <linearGradient id="abilityBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#58A6FF"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </linearGradient>

    <!-- Energy dot gradients -->
    <radialGradient id="energyMain" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#58A6FF"/>
      <stop offset="100%" stop-color="#3178C6"/>
    </radialGradient>
    <radialGradient id="energyWeak" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>
    <radialGradient id="energyResist" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>

    <!-- Avatar clip -->
    <clipPath id="octClip">
      <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73"/>
    </clipPath>

    <!-- Vignette for avatar -->
    <radialGradient id="avatarFade" cx="50%" cy="50%" r="50%">
      <stop offset="56%" stop-color="white" stop-opacity="0"/>
      <stop offset="100%" stop-color="black" stop-opacity="0.45"/>
    </radialGradient>

    <!-- Blur filter for drop shadows -->
    <filter id="blur"><feGaussianBlur stdDeviation="20"/></filter>

    <!-- Gradient border frame -->
    <linearGradient id="borderGradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientTransform="rotate(145)">
      <stop offset="0%" stop-color="#3178C6"/>
      <stop offset="100%" stop-color="#58A6FF"/>
    </linearGradient>
    <clipPath id="cardClip">
      <rect width="350" height="490" rx="16"/>
    </clipPath>
    <clipPath id="abilityClip">
      <rect x="12" y="228" width="326" height="68" rx="8"/>
    </clipPath>
    <clipPath id="attacksClip">
      <rect x="12" y="300" width="326" height="100" rx="8"/>
    </clipPath>
    <!-- Metallic V gradient for header -->
    <linearGradient id="silverName" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0%" stop-color="#ffffff"/>
      <stop offset="100%" stop-color="#cccccc"/>
    </linearGradient>
  </defs>

  <!-- ═══ OUTER GRADIENT BORDER FRAME ═══ -->
  <rect width="358" height="498" rx="20" fill="url(#borderGradient)"/>

  <!-- ═══ CARD CONTENT (clipped + offset by 4px border) ═══ -->
  <g transform="translate(4,4)" clip-path="url(#cardClip)">

  <!-- ═══ FULL-ART BACKGROUND ═══ -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)"/>
  
  <!-- Lighter theme wash — lets illustration show through -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)" opacity="0.50"/>

  <!-- ═══ INNER BORDER (subtle inset) ═══ -->
  <rect width="350" height="490" rx="16" fill="none" stroke="rgba(220,220,220,0.35)" stroke-width="1.5"/>

  <!-- ═══ HEADER BAR — lightened ═══ -->
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.60)"/>
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.38)"/>

  <!-- Evolution badge -->
  <rect x="16" y="10" width="83" height="26" rx="13" fill="url(#evoBadge)" stroke="rgba(0,0,0,0.2)" stroke-width="1"/>
  <text x="57.5" y="28" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="800" fill="#1a1a1a" letter-spacing="0.8">STAGE 1</text>

  <!-- Username with metallic gradient -->
  <text x="111" y="30" font-family="'Mona Sans', -apple-system, sans-serif" font-size="19" font-weight="900" fill="url(#silverName)" letter-spacing="-0.4" stroke="rgba(0,0,0,0.3)" stroke-width="0.5">asynced24</text>

  <!-- HP -->
  <text x="260" y="26" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="600" fill="rgba(255,255,255,0.90)" letter-spacing="1.2">HP</text>
  <text x="280" y="34" font-family="'Mona Sans', -apple-system, sans-serif" font-size="30" font-weight="900" fill="white" letter-spacing="-0.5">190</text>

  <!-- Type emoji -->
  <text x="320" y="33" font-size="20">⚡</text>

  <!-- ═══ AVATAR — lighter shell ═══ -->
  <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73" fill="rgba(10,12,18,0.42)" stroke="rgba(255,255,255,0.38)" stroke-width="2.5"/>
  <polygon points="175,64 209,76 221,110 221,150 209,184 175,196 141,184 129,150 129,110 141,76" fill="rgba(17,24,39,0.50)"/>
  
  <!-- Initials fallback -->
  <circle cx="175" cy="130" r="35" fill="#3178C6" opacity="0.8"/>
  <text x="175" y="140" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="32" font-weight="900" fill="white" opacity="0.9">A</text>
  
  <rect x="125" y="60" width="100" height="140" fill="url(#avatarFade)" clip-path="url(#octClip)"/>

  <!-- ═══ INFO BAR ═══ -->
  <text x="175" y="220" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="white" letter-spacing="0.3" stroke="rgba(0,0,0,0.6)" stroke-width="0.6" paint-order="stroke">@asynced24 · Toronto · Since 2022</text>

  <!-- ═══ ABILITY + ACTIVITY (combined panel — height 68px) ═══ -->
  <rect x="12" y="228" width="326" height="68" rx="8" fill="rgba(0,0,0,0.28)" stroke="#58A6FF60" stroke-width="1.5"/>
  <!-- Accent left border -->
  <rect x="12" y="228" width="3" height="68" rx="1.5" fill="#58A6FF80"/>
  <g clip-path="url(#abilityClip)">
    <rect x="19" y="234" width="44" height="14" rx="3" fill="url(#abilityBadge)"/>
    <text x="41" y="245" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="900" fill="white" letter-spacing="0.5">ABILITY</text>
    <text x="70" y="245" font-family="'Mona Sans', -apple-system, sans-serif" font-size="13" font-weight="760" fill="white">Polyglot</text>
    <!-- Description split across 2 lines so nothing is cut -->
    <text x="19" y="261" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">Writes 5 languages -</text>
    <text x="19" y="275" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">attacks deal 10 extra damage</text>
    <!-- Real activity behind the numbers -->
    <text x="19" y="289" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="500" fill="rgba(255,255,255,0.55)" letter-spacing="0.3">1,152 contribs · 31/53 wks active</text>
  </g>

  <!-- ═══ ATTACKS PANEL (shifted down 8px, height trimmed to 100px) ═══ -->
  <rect x="12" y="300" width="326" height="100" rx="8" fill="rgba(0,0,0,0.25)" stroke="rgba(255,255,255,0.10)" stroke-width="1"/>

  <g clip-path="url(#attacksClip)">
  <!-- ═══ ATTACK 1 ═══ -->
  <g>
    <circle cx="24" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="318" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Type Strike</text>
    <text x="326" y="320" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">110</text>
    <text x="60" y="333" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">1,152 contributions in the last year</text>
  </g>

  <!-- Divider -->
  <line x1="20" y1="346" x2="330" y2="346" stroke="rgba(255,255,255,0.18)" stroke-width="1"/>

  <!-- ═══ ATTACK 2 ═══ -->
  <g>
    <circle cx="24" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="366" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Thunder Compile</text>
    <text x="326" y="368" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">30</text>
    <text x="60" y="381" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">Powered by gitwrapped - ★ 1</text>
  </g>
  </g>

  <!-- ═══ BOTTOM STATS BAR — lightened ═══ -->
  <rect y="402" width="350" height="88" rx="16" fill="rgba(0,0,0,0.62)"/>
  <line x1="116" y1="416" x2="116" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>
  <line x1="234" y1="416" x2="234" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>

  <!-- Weakness -->
  <text x="58" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">WEAKNESS</text>
  <circle cx="46" cy="436" r="8" fill="url(#energyWeak)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="58" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">×2</text>

  <!-- Resistance -->
  <text x="175" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RESIST</text>
  <circle cx="163" cy="436" r="8" fill="url(#energyResist)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="175" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">-30</text>

  <!-- Retreat -->
  <text x="292" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RETREAT</text>
  <g>
    <circle cx="272" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="290" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="308" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  </g>

  <!-- Footer branding -->
  <line x1="20" y1="458" x2="330" y2="458" stroke="rgba(255,255,255,0.08)" stroke-width="0.5"/>
  <text x="20" y="476" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.5">gitwrapped · 5 lang · TypeScript</text>
  <text x="330" y="476" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.3">#1409 ◆</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders gaearon's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <!-- Full-art background gradient -->
    <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#6B7280"/>
      <stop offset="40%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </linearGradient>

    <!-- Evolution badge gradient -->
    <linearGradient id="evoBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#FFD700"/>
      <stop offset="100%" stop-color="#FFA500"/>
    </linearGradient>

    <!-- Ability badge gradient -->
    <linearGradient id="abilityBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </linearGradient>

    <!-- Energy dot gradients -->
    <radialGradient id="energyMain" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>
    <radialGradient id="energyWeak" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>
    <radialGradient id="energyResist" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>

    <!-- Avatar clip -->
    <clipPath id="octClip">
      <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73"/>
    </clipPath>

    <!-- Vignette for avatar -->
    <radialGradient id="avatarFade" cx="50%" cy="50%" r="50%">
      <stop offset="56%" stop-color="white" stop-opacity="0"/>
      <stop offset="100%" stop-color="black" stop-opacity="0.45"/>
    </radialGradient>

    <!-- Blur filter for drop shadows -->
    <filter id="blur"><feGaussianBlur stdDeviation="20"/></filter>

    <!-- Gradient border frame -->
    <linearGradient id="borderGradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientTransform="rotate(145)">
      <stop offset="0%" stop-color="#6B7280"/>
      <stop offset="100%" stop-color="#9CA3AF"/>
    </linearGradient>
    <clipPath id="cardClip">
      <rect width="350" height="490" rx="16"/>
    </clipPath>
    <clipPath id="abilityClip">
      <rect x="12" y="228" width="326" height="68" rx="8"/>
    </clipPath>
    <clipPath id="attacksClip">
      <rect x="12" y="300" width="326" height="100" rx="8"/>
    </clipPath>
    <!-- Metallic V gradient for header -->
    <linearGradient id="silverName" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0%" stop-color="#ffffff"/>
      <stop offset="100%" stop-color="#cccccc"/>
    </linearGradient>
  </defs>

  <!-- ═══ OUTER GRADIENT BORDER FRAME ═══ -->
  <rect width="358" height="498" rx="20" fill="url(#borderGradient)"/>

  <!-- ═══ CARD CONTENT (clipped + offset by 4px border) ═══ -->
  <g transform="translate(4,4)" clip-path="url(#cardClip)">

  <!-- ═══ FULL-ART BACKGROUND ═══ -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)"/>
  
  <!-- Lighter theme wash — lets illustration show through -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)" opacity="0.50"/>

  <!-- ═══ INNER BORDER (subtle inset) ═══ -->
  <rect width="350" height="490" rx="16" fill="none" stroke="rgba(220,220,220,0.35)" stroke-width="1.5"/>

  <!-- ═══ HEADER BAR — lightened ═══ -->
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.60)"/>
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.38)"/>

  <!-- Evolution badge -->
  <rect x="16" y="10" width="83" height="26" rx="13" fill="url(#evoBadge)" stroke="rgba(0,0,0,0.2)" stroke-width="1"/>
  <text x="57.5" y="28" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="800" fill="#1a1a1a" letter-spacing="0.8">STAGE 2</text>

  <!-- Username with metallic gradient -->
  <text x="111" y="30" font-family="'Mona Sans', -apple-system, sans-serif" font-size="19" font-weight="900" fill="url(#silverName)" letter-spacing="-0.4" stroke="rgba(0,0,0,0.3)" stroke-width="0.5">gaearon</text>

  <!-- HP -->
  <text x="260" y="26" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="600" fill="rgba(255,255,255,0.90)" letter-spacing="1.2">HP</text>
  <text x="280" y="34" font-family="'Mona Sans', -apple-system, sans-serif" font-size="30" font-weight="900" fill="white" letter-spacing="-0.5">270</text>

  <!-- Type emoji -->
  <text x="320" y="33" font-size="20">⚪</text>

  <!-- ═══ AVATAR — lighter shell ═══ -->
  <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73" fill="rgba(10,12,18,0.42)" stroke="rgba(255,255,255,0.38)" stroke-width="2.5"/>
  <polygon points="175,64 209,76 221,110 221,150 209,184 175,196 141,184 129,150 129,110 141,76" fill="rgba(17,24,39,0.50)"/>
  
  <!-- Initials fallback -->
  <circle cx="175" cy="130" r="35" fill="#6B7280" opacity="0.8"/>
  <text x="175" y="140" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="32" font-weight="900" fill="white" opacity="0.9">G</text>
  
  <rect x="125" y="60" width="100" height="140" fill="url(#avatarFade)" clip-path="url(#octClip)"/>

  <!-- ═══ INFO BAR ═══ -->
  <text x="175" y="220" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="white" letter-spacing="0.3" stroke="rgba(0,0,0,0.6)" stroke-width="0.6" paint-order="stroke">@gaearon · Since 2011</text>

  <!-- ═══ ABILITY + ACTIVITY (combined panel — height 68px) ═══ -->
  <rect x="12" y="228" width="326" height="68" rx="8" fill="rgba(0,0,0,0.28)" stroke="#9CA3AF60" stroke-width="1.5"/>
  <!-- Accent left border -->
  <rect x="12" y="228" width="3" height="68" rx="1.5" fill="#9CA3AF80"/>
  <g clip-path="url(#abilityClip)">
    <rect x="19" y="234" width="44" height="14" rx="3" fill="url(#abilityBadge)"/>
    <text x="41" y="245" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="900" fill="white" letter-spacing="0.5">ABILITY</text>
    <text x="70" y="245" font-family="'Mona Sans', -apple-system, sans-serif" font-size="13" font-weight="760" fill="white">Star Collector</text>
    <!-- Description split across 2 lines so nothing is cut -->
    <text x="19" y="261" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">46k stars across own repos -</text>
    <text x="19" y="275" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">immune to weakness</text>
    <!-- Real activity behind the numbers -->
    <text x="19" y="289" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="500" fill="rgba(255,255,255,0.55)" letter-spacing="0.3">1,055 contribs · 35/53 wks active</text>
  </g>

  <!-- ═══ ATTACKS PANEL (shifted down 8px, height trimmed to 100px) ═══ -->
  <rect x="12" y="300" width="326" height="100" rx="8" fill="rgba(0,0,0,0.25)" stroke="rgba(255,255,255,0.10)" stroke-width="1"/>

  <g clip-path="url(#attacksClip)">
  <!-- ═══ ATTACK 1 ═══ -->
  <g>
    <circle cx="24" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="318" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Code Strike</text>
    <text x="326" y="320" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">110</text>
    <text x="60" y="333" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">1,055 contributions in the last year</text>
  </g>

  <!-- Divider -->
  <line x1="20" y1="346" x2="330" y2="346" stroke="rgba(255,255,255,0.18)" stroke-width="1"/>

  <!-- ═══ ATTACK 2 ═══ -->
  <g>
    <circle cx="24" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="64" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="80" y="366" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Stack Overflow</text>
    <text x="326" y="368" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">190</text>
    <text x="80" y="381" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">Powered by react-hot-loader - ★ 12k</text>
  </g>
  </g>

  <!-- ═══ BOTTOM STATS BAR — lightened ═══ -->
  <rect y="402" width="350" height="88" rx="16" fill="rgba(0,0,0,0.62)"/>
  <line x1="116" y1="416" x2="116" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>
  <line x1="234" y1="416" x2="234" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>

  <!-- Weakness -->
  <text x="58" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">WEAKNESS</text>
  <circle cx="46" cy="436" r="8" fill="url(#energyWeak)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="58" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">×2</text>

  <!-- Resistance -->
  <text x="175" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RESIST</text>
  <circle cx="163" cy="436" r="8" fill="url(#energyResist)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="175" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">-30</text>

  <!-- Retreat -->
  <text x="292" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RETREAT</text>
  <g>
    <circle cx="272" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="290" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  </g>

  <!-- Footer branding -->
  <line x1="20" y1="458" x2="330" y2="458" stroke="rgba(255,255,255,0.08)" stroke-width="0.5"/>
  <text x="20" y="476" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.5">gitwrapped · 4 lang · Lean</text>
  <text x="330" y="476" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.3">#5581 ★</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders shrikanthv15's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <!-- Full-art background gradient -->
    <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#E25822"/>
      <stop offset="40%" stop-color="#FF6B35"/>
      <stop offset="100%" stop-color="#E25822"/>
    </linearGradient>

    <!-- Evolution badge gradient -->
    <linearGradient id="evoBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#FFD700"/>
      <stop offset="100%" stop-color="#FFA500"/>
    </linearGradient>

    <!-- Ability badge gradient -->
    <linearGradient id="abilityBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#FF6B35"/>
      <stop offset="100%" stop-color="#E25822"/>
    </linearGradient>

    <!-- Energy dot gradients -->
    <radialGradient id="energyMain" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#FF6B35"/>
      <stop offset="100%" stop-color="#E25822"/>
    </radialGradient>
    <radialGradient id="energyWeak" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>
    <radialGradient id="energyResist" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>

    <!-- Avatar clip -->
    <clipPath id="octClip">
      <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73"/>
    </clipPath>

    <!-- Vignette for avatar -->
    <radialGradient id="avatarFade" cx="50%" cy="50%" r="50%">
      <stop offset="56%" stop-color="white" stop-opacity="0"/>
      <stop offset="100%" stop-color="black" stop-opacity="0.45"/>
    </radialGradient>

    <!-- Blur filter for drop shadows -->
    <filter id="blur"><feGaussianBlur stdDeviation="20"/></filter>

    <!-- Gradient border frame -->
    <linearGradient id="borderGradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientTransform="rotate(145)">
      <stop offset="0%" stop-color="#E25822"/>
      <stop offset="100%" stop-color="#FF6B35"/>
    </linearGradient>
    <clipPath id="cardClip">
      <rect width="350" height="490" rx="16"/>
    </clipPath>
    <clipPath id="abilityClip">
      <rect x="12" y="228" width="326" height="68" rx="8"/>
    </clipPath>
    <clipPath id="attacksClip">
      <rect x="12" y="300" width="326" height="100" rx="8"/>
    </clipPath>
    <!-- Metallic V gradient for header -->
    <linearGradient id="silverName" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0%" stop-color="#ffffff"/>
      <stop offset="100%" stop-color="#cccccc"/>
    </linearGradient>
  </defs>

  <!-- ═══ OUTER GRADIENT BORDER FRAME ═══ -->
  <rect width="358" height="498" rx="20" fill="url(#borderGradient)"/>

  <!-- ═══ CARD CONTENT (clipped + offset by 4px border) ═══ -->
  <g transform="translate(4,4)" clip-path="url(#cardClip)">

  <!-- ═══ FULL-ART BACKGROUND ═══ -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)"/>
  
  <!-- Lighter theme wash — lets illustration show through -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)" opacity="0.50"/>

  <!-- ═══ INNER BORDER (subtle inset) ═══ -->
  <rect width="350" height="490" rx="16" fill="none" stroke="rgba(220,220,220,0.35)" stroke-width="1.5"/>

  <!-- ═══ HEADER BAR — lightened ═══ -->
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.60)"/>
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.38)"/>

  <!-- Evolution badge -->
  <rect x="16" y="10" width="83" height="26" rx="13" fill="url(#evoBadge)" stroke="rgba(0,0,0,0.2)" stroke-width="1"/>
  <text x="57.5" y="28" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="800" fill="#1a1a1a" letter-spacing="0.8">STAGE 2</text>

  <!-- Username with metallic gradient -->
  <text x="111" y="30" font-family="'Mona Sans', -apple-system, sans-serif" font-size="19" font-weight="900" fill="url(#silverName)" letter-spacing="-0.4" stroke="rgba(0,0,0,0.3)" stroke-width="0.5">shrikanthv15</text>

  <!-- HP -->
  <text x="260" y="26" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="600" fill="rgba(255,255,255,0.90)" letter-spacing="1.2">HP</text>
  <text x="280" y="34" font-family="'Mona Sans', -apple-system, sans-serif" font-size="30" font-weight="900" fill="white" letter-spacing="-0.5">230</text>

  <!-- Type emoji -->
  <text x="320" y="33" font-size="20">🔥</text>

  <!-- ═══ AVATAR — lighter shell ═══ -->
  <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73" fill="rgba(10,12,18,0.42)" stroke="rgba(255,255,255,0.38)" stroke-width="2.5"/>
  <polygon points="175,64 209,76 221,110 221,150 209,184 175,196 141,184 129,150 129,110 141,76" fill="rgba(17,24,39,0.50)"/>
  
  <!-- Initials fallback -->
  <circle cx="175" cy="130" r="35" fill="#E25822" opacity="0.8"/>
  <text x="175" y="140" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="32" font-weight="900" fill="white" opacity="0.9">S</text>
  
  <rect x="125" y="60" width="100" height="140" fill="url(#avatarFade)" clip-path="url(#octClip)"/>

  <!-- ═══ INFO BAR ═══ -->
  <text x="175" y="220" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="white" letter-spacing="0.3" stroke="rgba(0,0,0,0.6)" stroke-width="0.6" paint-order="stroke">@shrikanthv15 · Since 2018</text>

  <!-- ═══ ABILITY + ACTIVITY (combined panel — height 68px) ═══ -->
  <rect x="12" y="228" width="326" height="68" rx="8" fill="rgba(0,0,0,0.28)" stroke="#FF6B3560" stroke-width="1.5"/>
  <!-- Accent left border -->
  <rect x="12" y="228" width="3" height="68" rx="1.5" fill="#FF6B3580"/>
  <g clip-path="url(#abilityClip)">
    <rect x="19" y="234" width="44" height="14" rx="3" fill="url(#abilityBadge)"/>
    <text x="41" y="245" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="900" fill="white" letter-spacing="0.5">ABILITY</text>
    <text x="70" y="245" font-family="'Mona Sans', -apple-system, sans-serif" font-size="13" font-weight="760" fill="white">Iron Routine</text>
    <!-- Description split across 2 lines so nothing is cut -->
    <text x="19" y="261" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">Active 31 of the last 53 weeks -</text>
    <text x="19" y="275" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">immune to status effects</text>
    <!-- Real activity behind the numbers -->
    <text x="19" y="289" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="500" fill="rgba(255,255,255,0.55)" letter-spacing="0.3">326 contribs · 31/53 wks active</text>
  </g>

  <!-- ═══ ATTACKS PANEL (shifted down 8px, height trimmed to 100px) ═══ -->
  <rect x="12" y="300" width="326" height="100" rx="8" fill="rgba(0,0,0,0.25)" stroke="rgba(255,255,255,0.10)" stroke-width="1"/>

  <g clip-path="url(#attacksClip)">
  <!-- ═══ ATTACK 1 ═══ -->
  <g>
    <circle cx="24" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="318" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Flame Script</text>
    <text x="326" y="320" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">90</text>
    <text x="60" y="333" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">326 contributions in the last year</text>
  </g>

  <!-- Divider -->
  <line x1="20" y1="346" x2="330" y2="346" stroke="rgba(255,255,255,0.18)" stroke-width="1"/>

  <!-- ═══ ATTACK 2 ═══ -->
  <g>
    <circle cx="24" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="366" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Inferno Deploy</text>
    <text x="326" y="368" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">30</text>
    <text x="60" y="381" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">Powered by MAD1-Project - ★ 1</text>
  </g>
  </g>

  <!-- ═══ BOTTOM STATS BAR — lightened ═══ -->
  <rect y="402" width="350" height="88" rx="16" fill="rgba(0,0,0,0.62)"/>
  <line x1="116" y1="416" x2="116" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>
  <line x1="234" y1="416" x2="234" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>

  <!-- Weakness -->
  <text x="58" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">WEAKNESS</text>
  <circle cx="46" cy="436" r="8" fill="url(#energyWeak)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="58" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">×2</text>

  <!-- Resistance -->
  <text x="175" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RESIST</text>
  <circle cx="163" cy="436" r="8" fill="url(#energyResist)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="175" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">-30</text>

  <!-- Retreat -->
  <text x="292" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RETREAT</text>
  <g>
    <circle cx="272" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="290" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  </g>

  <!-- Footer branding -->
  <line x1="20" y1="458" x2="330" y2="458" stroke="rgba(255,255,255,0.08)" stroke-width="0.5"/>
  <text x="20" y="476" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.5">gitwrapped · 2 lang · Python</text>
  <text x="330" y="476" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.3">#5404 ★</text>
  </g>
</svg>"
`;

exports[`renderCardSVG > renders torvalds's card unchanged 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="358" height="498" viewBox="0 0 358 498" fill="none">
  <defs>
    <!-- Full-art background gradient -->
    <linearGradient id="bgGradient" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#555555"/>
      <stop offset="40%" stop-color="#777777"/>
      <stop offset="100%" stop-color="#555555"/>
    </linearGradient>

    <!-- Evolution badge gradient -->
    <linearGradient id="evoBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#FFD700"/>
      <stop offset="100%" stop-color="#FFA500"/>
    </linearGradient>

    <!-- Ability badge gradient -->
    <linearGradient id="abilityBadge" x1="0" y1="0" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#777777"/>
      <stop offset="100%" stop-color="#555555"/>
    </linearGradient>

    <!-- Energy dot gradients -->
    <radialGradient id="energyMain" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#777777"/>
      <stop offset="100%" stop-color="#555555"/>
    </radialGradient>
    <radialGradient id="energyWeak" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>
    <radialGradient id="energyResist" cx="35%" cy="35%">
      <stop offset="0%" stop-color="#9CA3AF"/>
      <stop offset="100%" stop-color="#6B7280"/>
    </radialGradient>

    <!-- Avatar clip -->
    <clipPath id="octClip">
      <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73"/>
    </clipPath>

    <!-- Vignette for avatar -->
    <radialGradient id="avatarFade" cx="50%" cy="50%" r="50%">
      <stop offset="56%" stop-color="white" stop-opacity="0"/>
      <stop offset="100%" stop-color="black" stop-opacity="0.45"/>
    </radialGradient>

    <!-- Blur filter for drop shadows -->
    <filter id="blur"><feGaussianBlur stdDeviation="20"/></filter>

    <!-- Gradient border frame -->
    <linearGradient id="borderGradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientTransform="rotate(145)">
      <stop offset="0%" stop-color="#555555"/>
      <stop offset="100%" stop-color="#777777"/>
    </linearGradient>
    <clipPath id="cardClip">
      <rect width="350" height="490" rx="16"/>
    </clipPath>
    <clipPath id="abilityClip">
      <rect x="12" y="228" width="326" height="68" rx="8"/>
    </clipPath>
    <clipPath id="attacksClip">
      <rect x="12" y="300" width="326" height="100" rx="8"/>
    </clipPath>
    <!-- Metallic V gradient for header -->
    <linearGradient id="silverName" x1="0" y1="0" x2="0" y2="1">
      <stop offset="0%" stop-color="#ffffff"/>
      <stop offset="100%" stop-color="#cccccc"/>
    </linearGradient>
  </defs>

  <!-- ═══ OUTER GRADIENT BORDER FRAME ═══ -->
  <rect width="358" height="498" rx="20" fill="url(#borderGradient)"/>

  <!-- ═══ CARD CONTENT (clipped + offset by 4px border) ═══ -->
  <g transform="translate(4,4)" clip-path="url(#cardClip)">

  <!-- ═══ FULL-ART BACKGROUND ═══ -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)"/>
  
  <!-- Lighter theme wash — lets illustration show through -->
  <rect width="350" height="490" rx="16" fill="url(#bgGradient)" opacity="0.50"/>

  <!-- ═══ INNER BORDER (subtle inset) ═══ -->
  <rect width="350" height="490" rx="16" fill="none" stroke="rgba(220,220,220,0.35)" stroke-width="1.5"/>

  <!-- ═══ HEADER BAR — lightened ═══ -->
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.60)"/>
  <rect width="350" height="48" rx="16" fill="rgba(0,0,0,0.38)"/>

  <!-- Evolution badge -->
  <rect x="16" y="10" width="83" height="26" rx="13" fill="url(#evoBadge)" stroke="rgba(0,0,0,0.2)" stroke-width="1"/>
  <text x="57.5" y="28" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="800" fill="#1a1a1a" letter-spacing="0.8">STAGE 2</text>

  <!-- Username with metallic gradient -->
  <text x="111" y="30" font-family="'Mona Sans', -apple-system, sans-serif" font-size="19" font-weight="900" fill="url(#silverName)" letter-spacing="-0.4" stroke="rgba(0,0,0,0.3)" stroke-width="0.5">torvalds</text>

  <!-- HP -->
  <text x="260" y="26" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="600" fill="rgba(255,255,255,0.90)" letter-spacing="1.2">HP</text>
  <text x="280" y="34" font-family="'Mona Sans', -apple-system, sans-serif" font-size="30" font-weight="900" fill="white" letter-spacing="-0.5">340</text>

  <!-- Type emoji -->
  <text x="320" y="33" font-size="20">⚪</text>

  <!-- ═══ AVATAR — lighter shell ═══ -->
  <polygon points="175,60 212,73 225,110 225,150 212,187 175,200 138,187 125,150 125,110 138,73" fill="rgba(10,12,18,0.42)" stroke="rgba(255,255,255,0.38)" stroke-width="2.5"/>
  <polygon points="175,64 209,76 221,110 221,150 209,184 175,196 141,184 129,150 129,110 141,76" fill="rgba(17,24,39,0.50)"/>
  
  <!-- Initials fallback -->
  <circle cx="175" cy="130" r="35" fill="#555555" opacity="0.8"/>
  <text x="175" y="140" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="32" font-weight="900" fill="white" opacity="0.9">T</text>
  
  <rect x="125" y="60" width="100" height="140" fill="url(#avatarFade)" clip-path="url(#octClip)"/>

  <!-- ═══ INFO BAR ═══ -->
  <text x="175" y="220" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="white" letter-spacing="0.3" stroke="rgba(0,0,0,0.6)" stroke-width="0.6" paint-order="stroke">@torvalds · Portland, OR · Since 2011</text>

  <!-- ═══ ABILITY + ACTIVITY (combined panel — height 68px) ═══ -->
  <rect x="12" y="228" width="326" height="68" rx="8" fill="rgba(0,0,0,0.28)" stroke="#77777760" stroke-width="1.5"/>
  <!-- Accent left border -->
  <rect x="12" y="228" width="3" height="68" rx="1.5" fill="#77777780"/>
  <g clip-path="url(#abilityClip)">
    <rect x="19" y="234" width="44" height="14" rx="3" fill="url(#abilityBadge)"/>
    <text x="41" y="245" text-anchor="middle" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="900" fill="white" letter-spacing="0.5">ABILITY</text>
    <text x="70" y="245" font-family="'Mona Sans', -apple-system, sans-serif" font-size="13" font-weight="760" fill="white">Star Collector</text>
    <!-- Description split across 2 lines so nothing is cut -->
    <text x="19" y="261" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">262k stars across own repos -</text>
    <text x="19" y="275" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.90)" font-style="italic">immune to weakness</text>
    <!-- Real activity behind the numbers -->
    <text x="19" y="289" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="500" fill="rgba(255,255,255,0.55)" letter-spacing="0.3">3,763 contribs · 53/53 wks active</text>
  </g>

  <!-- ═══ ATTACKS PANEL (shifted down 8px, height trimmed to 100px) ═══ -->
  <rect x="12" y="300" width="326" height="100" rx="8" fill="rgba(0,0,0,0.25)" stroke="rgba(255,255,255,0.10)" stroke-width="1"/>

  <g clip-path="url(#attacksClip)">
  <!-- ═══ ATTACK 1 ═══ -->
  <g>
    <circle cx="24" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="314" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="60" y="318" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">Memory Alloc</text>
    <text x="326" y="320" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">120</text>
    <text x="60" y="333" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">3,763 contributions in the last year</text>
  </g>

  <!-- Divider -->
  <line x1="20" y1="346" x2="330" y2="346" stroke="rgba(255,255,255,0.18)" stroke-width="1"/>

  <!-- ═══ ATTACK 2 ═══ -->
  <g>
    <circle cx="24" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="44" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="64" cy="362" r="9" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <text x="80" y="366" font-family="'Mona Sans', -apple-system, sans-serif" font-size="15" font-weight="850" fill="white" letter-spacing="-0.2" stroke="rgba(0,0,0,0.7)" stroke-width="0.8" paint-order="stroke">System Call</text>
    <text x="326" y="368" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="24" font-weight="900" fill="white" stroke="rgba(0,0,0,0.75)" stroke-width="0.9" paint-order="stroke">200</text>
    <text x="80" y="381" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="500" fill="rgba(255,255,255,0.85)" stroke="rgba(0,0,0,0.45)" stroke-width="0.5" paint-order="stroke">Powered by linux - ★ 250k</text>
  </g>
  </g>

  <!-- ═══ BOTTOM STATS BAR — lightened ═══ -->
  <rect y="402" width="350" height="88" rx="16" fill="rgba(0,0,0,0.62)"/>
  <line x1="116" y1="416" x2="116" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>
  <line x1="234" y1="416" x2="234" y2="450" stroke="rgba(255,255,255,0.14)" stroke-width="1"/>

  <!-- Weakness -->
  <text x="58" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">WEAKNESS</text>
  <circle cx="46" cy="436" r="8" fill="url(#energyWeak)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="58" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">×2</text>

  <!-- Resistance -->
  <text x="175" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RESIST</text>
  <circle cx="163" cy="436" r="8" fill="url(#energyResist)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  <text x="175" y="440" font-family="'Mona Sans', -apple-system, sans-serif" font-size="11" font-weight="700" fill="white">-30</text>

  <!-- Retreat -->
  <text x="292" y="420" text-anchor="middle" font-family="'JetBrains Mono', monospace" font-size="11" font-weight="700" fill="rgba(255,255,255,0.60)" letter-spacing="0.5">RETREAT</text>
  <g>
    <circle cx="272" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="290" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
    <circle cx="308" cy="436" r="8" fill="url(#energyMain)" stroke="rgba(255,255,255,0.3)" stroke-width="1"/>
  </g>

  <!-- Footer branding -->
  <line x1="20" y1="458" x2="330" y2="458" stroke="rgba(255,255,255,0.08)" stroke-width="0.5"/>
  <text x="20" y="476" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.5">gitwrapped · 1 lang · C</text>
  <text x="330" y="476" text-anchor="end" font-family="'JetBrains Mono', monospace" font-size="11" fill="rgba(255,255,255,0.45)" letter-spacing="0.3">#3960 ★</text>
  </g>
</svg>"
`;
